<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:padding="8dp"
        android:layout_margin="12dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">
        <!--todo sterge textele pt preview-->
        <TextView
            android:textStyle="bold"
            android:text="Titlu"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/overview"
            android:id="@+id/text_label_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_overview"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/budget"
            android:id="@+id/text_label_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_budget"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!--<TextView-->
        <!--android:textStyle="bold"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="16sp"-->
        <!--android:text="Genres"-->
        <!--android:id="@+id/text_label_genres"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <!--<TextView-->
        <!--android:id="@+id/text_genres"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="16sp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->


        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/release_date"
            android:id="@+id/text_label_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_release_date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/revenue"
            android:id="@+id/text_label_revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_revenue"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/runtime"
            android:id="@+id/text_label_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_runtime"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
